--- a/ts/packages/ent-passport/package.json
+++ b/ts/packages/ent-passport/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lolopinto/ent-passport",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "ent passport integration",
   "main": "dist/passport.js",
   "types": "dist/passport.d.ts",
@@ -31,20 +31,20 @@
     "registry": "https://npm.pkg.github.com/"
   },
   "peerDependencies": {
-    "@lolopinto/ent": "0.0.83"
+    "@lolopinto/ent": "^0.0.88"
   },
   "devDependencies": {
-    "@lolopinto/ent": "0.0.83",
-    "@lolopinto/ent-graphql-tests": "0.0.11",
+    "@lolopinto/ent": "0.0.88",
+    "@lolopinto/ent-graphql-tests": "^0.0.13",
     "@types/express-session": "^1.17.3",
-    "@types/jest": "^26.0.20",
+    "@types/jest": "^26.0.23",
     "@types/passport-strategy": "^0.2.35",
-    "@types/supertest": "^2.0.10",
+    "@types/supertest": "^2.0.11",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
     "jest": "^26.6.3",
     "jest-expect-message": "^1.0.2",
-    "pg": "^8.5.1",
+    "pg": "^8.6.0",
     "supertest": "^6.1.3"
   },
   "dependencies": {
