--- a/ts/packages/ent-email/package.json
+++ b/ts/packages/ent-email/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lolopinto/ent-email",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "ent email datatype",
   "main": "dist/email.js",
   "types": "dist/email.d.ts",
@@ -31,16 +31,16 @@
     "registry": "https://npm.pkg.github.com/"
   },
   "dependencies": {
-    "email-addresses": "^3.1.0"
+    "email-addresses": "^4.0.0"
   },
   "devDependencies": {
-    "@lolopinto/ent": "0.0.13",
-    "@types/jest": "^26.0.9",
-    "jest": "^26.2.2",
-    "ts-jest": "^26.1.4",
-    "typescript": "^3.9.7"
+    "@lolopinto/ent": "0.0.88",
+    "@types/jest": "^26.0.23",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.6",
+    "typescript": "^4.2.4"
   },
   "peerDependencies": {
-    "@lolopinto/ent": "0.0.83"
+    "@lolopinto/ent": "^0.0.88"
   }
 }
