--- a/ts/package.json
+++ b/ts/package.json
@@ -46,6 +46,7 @@
     "@types/node": "^15.0.2",
     "@types/pluralize": "0.0.29",
     "@types/supertest": "^2.0.10",
+    "@types/uuid": "^8.3.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.3.0",
