--- a/.github/workflows/go_ci.yml
+++ b/.github/workflows/go_ci.yml
@@ -2,7 +2,7 @@ name: Go CI
 
 on:
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
     paths:
       - '**.go'
       - ts/src/**
