--- a/.github/workflows/python_ci.yml
+++ b/.github/workflows/python_ci.yml
@@ -5,7 +5,7 @@ name: Python auto_schema tests
 
 on:
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
     paths:
       - python/**
 
