--- a/ts/packages/ent-email/package.json
+++ b/ts/packages/ent-email/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lolopinto/ent-email",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "ent email datatype",
   "main": "dist/email.js",
   "types": "dist/email.d.ts",
@@ -34,13 +34,13 @@
     "email-addresses": "^4.0.0"
   },
   "devDependencies": {
-    "@lolopinto/ent": "0.0.88",
+    "@lolopinto/ent": "0.0.89",
     "@types/jest": "^26.0.23",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.6",
     "typescript": "^4.2.4"
   },
   "peerDependencies": {
-    "@lolopinto/ent": "^0.0.88"
+    "@lolopinto/ent": ">= 0.0.89"
   }
 }
