--- a/ts/package.json
+++ b/ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lolopinto/ent",
-  "version": "0.0.89",
+  "version": "0.0.90",
   "description": "ent framework",
   "main": "index.js",
   "types": "index.d.ts",
@@ -8,15 +8,6 @@
     "example": "examples"
   },
   "dependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/glob": "^7.1.1",
-    "@types/js-yaml": "^4.0.1",
-    "@types/luxon": "^1.25.1",
-    "@types/memoizee": "^0.4.5",
-    "@types/minimist": "^1.2.0",
-    "@types/passport": "^1.0.3",
-    "@types/passport-jwt": "^3.0.3",
-    "@types/pg": "^7.14.1",
     "dataloader": "^2.0.0",
     "glob": "^7.1.6",
     "graph-data-structure": "^1.12.0",
@@ -36,14 +27,23 @@
     "uuid": "^8.3.2"
   },
   "peerDependencies": {
-    "graphql": "^15.3.0"
+    "graphql": ">= 15.3.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.9",
+    "@types/glob": "^7.1.1",
     "@types/graphql-upload": "^8.0.4",
     "@types/jest": "^26.0.23",
     "@types/jest-expect-message": "^1.0.1",
+    "@types/js-yaml": "^4.0.1",
+    "@types/luxon": "^1.25.1",
+    "@types/memoizee": "^0.4.5",
+    "@types/minimist": "^1.2.0",
     "@types/node": "^15.0.2",
+    "@types/passport": "^1.0.3",
+    "@types/passport-jwt": "^3.0.3",
+    "@types/pg": "^7.14.1",
     "@types/pluralize": "0.0.29",
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
