--- a/examples/ent-rsvp/backend/package.json
+++ b/examples/ent-rsvp/backend/package.json
@@ -25,15 +25,12 @@
   },
   "homepage": "https://github.com/lolopinto/ent-starter#readme",
   "dependencies": {
-    "@lolopinto/ent": "^0.0.88",
-    "@lolopinto/ent-email": "0.0.1",
-    "@lolopinto/ent-passport": "^0.0.2",
-    "@lolopinto/ent-password": "0.0.2",
+    "@lolopinto/ent": "^0.0.90",
+    "@lolopinto/ent-email": "0.0.3",
+    "@lolopinto/ent-passport": "0.0.4",
+    "@lolopinto/ent-password": "0.0.4",
     "@sentry/node": "^6.3.0",
     "@sentry/tracing": "^6.3.0",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/express": "^4.17.9",
-    "@types/graphql-upload": "^8.0.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "csv-parse": "^4.15.3",
@@ -47,8 +44,11 @@
     "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
-    "@lolopinto/ent-graphql-tests": "0.0.12",
+    "@lolopinto/ent-graphql-tests": "0.0.14",
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.9",
+    "@types/graphql-upload": "^8.0.4",
     "@types/jest": "^26.0.20",
     "jest": "^26.6.3",
     "jest-expect-message": "^1.0.2",
