--- a/examples/ent-rsvp/backend/Dockerfile
+++ b/examples/ent-rsvp/backend/Dockerfile
@@ -5,8 +5,9 @@ WORKDIR /app
 COPY . /app
 
 RUN rm -rf node_modules 
-RUN rm package-lock.json 
-RUN npm install 
+#RUN rm package-lock.json 
+ENV NODE_ENV=production
+RUN npm install --production
 RUN npm run compile
 
 ARG DB_CONNECTION_STRING=$DB_CONNECTION_STRING
