--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ dist
 build
 *.egg-info
 .env
+*.docusaurus 
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
