--- a/ts/package.json
+++ b/ts/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@types/node": "^15.0.2",
+    "better-sqlite3": "^7.4.1",
     "dataloader": "^2.0.0",
     "glob": "^7.1.6",
     "graph-data-structure": "^1.12.0",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/better-sqlite3": "^5.4.1",
     "@types/express": "^4.17.9",
     "@types/glob": "^7.1.1",
     "@types/graphql-upload": "^8.0.4",
