--- a/examples/todo-sqlite/package.json
+++ b/examples/todo-sqlite/package.json
@@ -22,6 +22,7 @@
     "@types/jest-expect-message": "^1.0.3",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/supertest": "^2.0.11",
+    "@types/uuid": "^8.3.0",
     "cookie-parser": "^1.4.5",
     "jest": "^26.6.3",
     "jest-date-mock": "^1.0.8",
@@ -30,7 +31,7 @@
     "ts-jest": "^26.5.6"
   },
   "dependencies": {
-    "@lolopinto/ent": "^0.0.95",
+    "@lolopinto/ent": "^0.0.96",
     "@lolopinto/ent-email": "^0.0.3",
     "@lolopinto/ent-phonenumber": "^0.0.3",
     "@types/express-session": "^1.17.3",
