--- a/examples/todo-sqlite/package.json
+++ b/examples/todo-sqlite/package.json
@@ -20,39 +20,21 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.23",
     "@types/jest-expect-message": "^1.0.3",
-    "@types/jsonwebtoken": "^8.5.1",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.0",
-    "cookie-parser": "^1.4.5",
     "jest": "^26.6.3",
     "jest-date-mock": "^1.0.8",
-    "jest-expect-message": "^1.0.2",
     "supertest": "^6.1.3",
-    "ts-jest": "^26.5.6"
+    "ts-jest": "^26.5.6",
+    "jest-expect-message": "^1.0.2"
   },
   "dependencies": {
     "@lolopinto/ent": "^0.0.96",
-    "@lolopinto/ent-email": "^0.0.3",
     "@lolopinto/ent-phonenumber": "^0.0.3",
-    "@types/express-session": "^1.17.3",
-    "@types/graphql-upload": "^8.0.4",
-    "@types/luxon": "^1.26.5",
     "@types/node": "^15.0.3",
-    "@types/passport-jwt": "^3.0.5",
-    "@types/passport-local": "^1.0.33",
-    "@types/passport-strategy": "^0.2.35",
-    "csv-parse": "^4.15.4",
-    "dataloader": "^2.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
-    "express-session": "^1.17.1",
     "graphql": "^15.5.0",
-    "graphql-upload": "^12.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "libphonenumber-js": "^1.7.56",
-    "luxon": "^1.27.0",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
-    "passport-strategy": "^1.0.0"
+    "libphonenumber-js": "^1.7.56"
   }
 }
