--- a/examples/todo-sqlite/package.json
+++ b/examples/todo-sqlite/package.json
@@ -24,12 +24,12 @@
     "@types/uuid": "^8.3.0",
     "jest": "^26.6.3",
     "jest-date-mock": "^1.0.8",
+    "jest-expect-message": "^1.0.2",
     "supertest": "^6.1.3",
-    "ts-jest": "^26.5.6",
-    "jest-expect-message": "^1.0.2"
+    "ts-jest": "^26.5.6"
   },
   "dependencies": {
-    "@lolopinto/ent": "^0.0.96",
+    "@lolopinto/ent": "^0.0.97",
     "@lolopinto/ent-phonenumber": "^0.0.3",
     "@types/node": "^15.0.3",
     "express": "^4.17.1",
