--- a/ts/package.json
+++ b/ts/package.json
@@ -32,6 +32,7 @@
     "graphql": ">= 15.3.0"
   },
   "devDependencies": {
+    "@lolopinto/ent-email": "^0.0.3",
     "@types/bcryptjs": "^2.4.2",
     "@types/better-sqlite3": "^5.4.1",
     "@types/express": "^4.17.9",
