--- a/ts/packages/ent-phonenumber/package.json
+++ b/ts/packages/ent-phonenumber/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lolopinto/ent-phonenumber",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "phone number datatype",
   "main": "dist/phonenumber.js",
   "types": "dist/phonenumber.d.ts",
@@ -31,7 +31,7 @@
     "registry": "https://npm.pkg.github.com/"
   },
   "devDependencies": {
-    "@lolopinto/ent": "0.0.89",
+    "@lolopinto/ent": "^0.0.99",
     "@types/jest": "^26.0.23",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.6"
@@ -40,6 +40,6 @@
     "libphonenumber-js": "^1.9.17"
   },
   "peerDependencies": {
-    "@lolopinto/ent": ">= 0.0.89"
+    "@lolopinto/ent": ">= 0.0.99"
   }
 }
