--- a/ts/packages/snowtop-email/package.json
+++ b/ts/packages/snowtop-email/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@lolopinto/ent-email",
-  "version": "0.0.4",
-  "description": "ent email datatype",
+  "name": "@snowtop/snowtop-email",
+  "version": "0.0.1",
+  "description": "snowtop ent email datatype",
   "main": "dist/email.js",
   "types": "dist/email.d.ts",
   "files": [
@@ -14,7 +14,7 @@
   "repository": {
     "type": "git",
     "url": "git@github.com:lolopinto/ent.git",
-    "directory": "packages/ent-email"
+    "directory": "packages/snowtop-email"
   },
   "keywords": [
     "ent",
@@ -27,20 +27,17 @@
     "url": "https://github.com/lolopinto/ent/issues"
   },
   "homepage": "https://github.com/lolopinto/ent#readme",
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
-  },
   "dependencies": {
     "email-addresses": "^4.0.0"
   },
   "devDependencies": {
-    "@lolopinto/ent": "^0.0.99",
+    "@snowtop/snowtop-ts": "^0.0.2",
     "@types/jest": "^26.0.23",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.6",
     "typescript": "^4.2.4"
   },
   "peerDependencies": {
-    "@lolopinto/ent": ">= 0.0.99"
+    "@snowtop/snowtop-ts": ">= 0.0.2"
   }
 }
