--- a/ts/packages/snowtop-phonenumber/package.json
+++ b/ts/packages/snowtop-phonenumber/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@lolopinto/ent-phonenumber",
-  "version": "0.0.4",
-  "description": "phone number datatype",
+  "name": "@snowtop/snowtop-phonenumber",
+  "version": "0.0.1",
+  "description": "snowtop ent phone number datatype",
   "main": "dist/phonenumber.js",
   "types": "dist/phonenumber.d.ts",
   "files": [
@@ -14,9 +14,10 @@
   "repository": {
     "type": "git",
     "url": "git@github.com:lolopinto/ent.git",
-    "directory": "packages/ent-phonenumber"
+    "directory": "packages/snowtop-phonenumber"
   },
   "keywords": [
+    "snowtop",
     "ent",
     "phone",
     "phonenumber"
@@ -27,11 +28,8 @@
     "url": "https://github.com/lolopinto/ent/issues"
   },
   "homepage": "https://github.com/lolopinto/ent#readme",
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
-  },
   "devDependencies": {
-    "@lolopinto/ent": "^0.0.99",
+    "@snowtop/snowtop-ts": "^0.0.2",
     "@types/jest": "^26.0.23",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.6"
@@ -40,6 +38,6 @@
     "libphonenumber-js": "^1.9.17"
   },
   "peerDependencies": {
-    "@lolopinto/ent": ">= 0.0.99"
+    "@snowtop/snowtop-ts": ">= 0.0.2"
   }
 }
