--- a/ts/package.json
+++ b/ts/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@snowtop/snowtop-ts",
-  "version": "0.0.5",
+  "name": "@snowtop/ent",
+  "version": "0.0.1",
   "description": "snowtop ent framework",
   "main": "index.js",
   "types": "index.d.ts",
