--- a/ts/packages/ent-email/package.json
+++ b/ts/packages/ent-email/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@snowtop/snowtop-email",
+  "name": "@snowtop/ent-email",
   "version": "0.0.1",
   "description": "snowtop ent email datatype",
   "main": "dist/email.js",
@@ -14,7 +14,7 @@
   "repository": {
     "type": "git",
     "url": "git@github.com:lolopinto/ent.git",
-    "directory": "packages/snowtop-email"
+    "directory": "packages/ent-email"
   },
   "keywords": [
     "snowtop",
@@ -32,13 +32,13 @@
     "email-addresses": "^4.0.0"
   },
   "devDependencies": {
-    "@snowtop/snowtop-ts": "^0.0.2",
+    "@snowtop/ent": "^0.0.1",
     "@types/jest": "^26.0.23",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.6",
     "typescript": "^4.2.4"
   },
   "peerDependencies": {
-    "@snowtop/snowtop-ts": ">= 0.0.2"
+    "@snowtop/ent": ">= 0.0.1"
   }
 }
