--- a/ts/packages/ent-phonenumber/package.json
+++ b/ts/packages/ent-phonenumber/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@snowtop/snowtop-phonenumber",
+  "name": "@snowtop/ent-phonenumber",
   "version": "0.0.1",
   "description": "snowtop ent phone number datatype",
   "main": "dist/phonenumber.js",
@@ -14,7 +14,7 @@
   "repository": {
     "type": "git",
     "url": "git@github.com:lolopinto/ent.git",
-    "directory": "packages/snowtop-phonenumber"
+    "directory": "packages/ent-phonenumber"
   },
   "keywords": [
     "snowtop",
@@ -29,7 +29,7 @@
   },
   "homepage": "https://github.com/lolopinto/ent#readme",
   "devDependencies": {
-    "@snowtop/snowtop-ts": "^0.0.2",
+    "@snowtop/ent": "^0.0.1",
     "@types/jest": "^26.0.23",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.6"
@@ -38,6 +38,6 @@
     "libphonenumber-js": "^1.9.17"
   },
   "peerDependencies": {
-    "@snowtop/snowtop-ts": ">= 0.0.2"
+    "@snowtop/ent": ">= 0.0.1"
   }
 }
