--- a/ts/packages/ent-password/package.json
+++ b/ts/packages/ent-password/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@snowtop/snowtop-password",
+  "name": "@snowtop/ent-password",
   "version": "0.0.1",
   "description": "password datatype for ents",
   "main": "dist/password.js",
@@ -14,7 +14,7 @@
   "repository": {
     "type": "git",
     "url": "git@github.com:lolopinto/ent.git",
-    "directory": "packages/snowtop-password"
+    "directory": "packages/ent-password"
   },
   "keywords": [
     "snowtop",
@@ -32,13 +32,13 @@
     "bcryptjs": "^2.4.3"
   },
   "devDependencies": {
-    "@snowtop/snowtop-ts": "^0.0.2",
+    "@snowtop/ent": "^0.0.1",
     "@types/jest": "^26.0.9",
     "jest": "^26.2.2",
     "password-validator": "^5.1.0",
     "ts-jest": "^26.1.4"
   },
   "peerDependencies": {
-    "@snowtop/snowtop-ts": ">= 0.0.2"
+    "@snowtop/ent": ">= 0.0.1"
   }
 }
