--- a/examples/simple/package.json
+++ b/examples/simple/package.json
@@ -18,7 +18,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@snowtop/snowtop-graphql-tests": "^0.0.1",
+    "@snowtop/ent-graphql-tests": "^0.0.1",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.23",
     "@types/jest-expect-message": "^1.0.3",
@@ -32,11 +32,11 @@
     "ts-jest": "^26.5.6"
   },
   "dependencies": {
-    "@snowtop/snowtop-email": "^0.0.1",
-    "@snowtop/snowtop-passport": "^0.0.1",
-    "@snowtop/snowtop-password": "^0.0.1",
-    "@snowtop/snowtop-phonenumber": "^0.0.1",
-    "@snowtop/snowtop-ts": "^0.0.5",
+    "@snowtop/ent-email": "^0.0.1",
+    "@snowtop/ent-passport": "^0.0.1",
+    "@snowtop/ent-password": "^0.0.1",
+    "@snowtop/ent-phonenumber": "^0.0.1",
+    "@snowtop/ent": "^0.0.1",
     "@types/express-session": "^1.17.3",
     "@types/graphql-upload": "^8.0.4",
     "@types/luxon": "^1.26.5",
