--- a/examples/ent-rsvp/backend/package.json
+++ b/examples/ent-rsvp/backend/package.json
@@ -28,10 +28,10 @@
   "dependencies": {
     "@sentry/node": "^6.3.0",
     "@sentry/tracing": "^6.3.0",
-    "@snowtop/snowtop-email": "0.0.1",
-    "@snowtop/snowtop-passport": "0.0.1",
-    "@snowtop/snowtop-password": "0.0.1",
-    "@snowtop/snowtop-ts": "^0.0.4",
+    "@snowtop/ent-email": "0.0.1",
+    "@snowtop/ent-passport": "0.0.1",
+    "@snowtop/ent-password": "0.0.1",
+    "@snowtop/ent": "^0.0.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "csv-parse": "^4.15.3",
@@ -45,7 +45,7 @@
     "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
-    "@snowtop/snowtop-graphql-tests": "0.0.1",
+    "@snowtop/ent-graphql-tests": "0.0.1",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.9",
