--- a/docs/package.json
+++ b/docs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-website",
+  "name": "ent-docs",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -22,6 +22,7 @@
     "@types/react": "^17.0.7",
     "clsx": "^1.1.1",
     "file-loader": "^6.2.0",
+    "raw-loader": "^4.0.2",
     "react": "^17.0.1",
     "react-dev-utils": "^11.0.4",
     "react-dom": "^17.0.1",
