--- a/.github/workflows/new_docker_image.yml
+++ b/.github/workflows/new_docker_image.yml
@@ -33,6 +33,14 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
+    - name: Cache Docker layers
+      uses: actions/cache@v2
+      with:
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-buildx-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-buildx-
+
     - name: docker login
       env:
         DOCKER_TOKEN: ${{secrets.DOCKER_TOKEN}}
@@ -41,3 +49,8 @@ jobs:
     - name: build the image
       run: cd release_image && go run .
 
+    - name: Move cache
+      run: |
+        rm -rf /tmp/.buildx-cache
+        mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+        
