--- a/ts/package.json
+++ b/ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@snowtop/ent",
-  "version": "0.0.39",
+  "version": "0.0.40-alpha",
   "description": "snowtop ent framework",
   "main": "index.js",
   "types": "index.d.ts",
