--- a/ts/package.json
+++ b/ts/package.json
@@ -61,6 +61,7 @@
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
     "better-sqlite3": "^7.4.1",
+    "email-addresses": "^5.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "15.5",
