--- a/ts/package.json
+++ b/ts/package.json
@@ -63,8 +63,8 @@
     "better-sqlite3": "^7.4.1",
     "email-addresses": "^5.0.0",
     "express": "^4.17.1",
-    "express-graphql": "^0.12.0",
     "graphql": "^16.5.0",
+    "graphql-helix": "^1.12.0",
     "graphql-type-json": "^0.3.2",
     "graphql-upload": "^13.0.0",
     "jest": "^27.4.3",
