--- a/examples/todo-sqlite/package.json
+++ b/examples/todo-sqlite/package.json
@@ -20,7 +20,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@snowtop/ent-graphql-tests": "^0.0.4",
+    "@snowtop/ent-graphql-tests": "^0.1.0-alpha2",
     "@types/express": "^4.17.11",
     "@types/jest": "^27.0.1",
     "@types/jest-expect-message": "^1.0.3",
@@ -35,15 +35,15 @@
     "uuid": "^8.3.2"
   },
   "dependencies": {
-    "@snowtop/ent": "^0.1.0-alpha8",
+    "@snowtop/ent": "^0.1.0-alpha9",
     "@snowtop/ent-phonenumber": "^0.0.1",
     "@snowtop/ent-soft-delete": "^0.0.1",
     "@types/node": "^15.0.3",
     "@types/pg": "^8.6.1",
     "better-sqlite3": "^7.4.3",
     "express": "^4.17.1",
-    "express-graphql": "^0.12.0",
-    "graphql": "^15.7.2",
+    "graphql": "^16.5.0",
+    "graphql-helix": "^1.12.0",
     "libphonenumber-js": "^1.7.56"
   }
 }
